# expert-search-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: bm25_index.py  chroma_store.py  cli.py  config.py  db.py  deterministic_agent.py  embeddings.py  ingest.py  judge.py  llm.py  llm_client.py  main.py  models.py  probe_texts.py  profile_builder.py  query_parser.py  rag_agent.py  scoring.py  search.py  session_store.py  system_prompt.py  vocabulary.py
app/routes/: chat.py  experts.py  health.py  ingest.py
app/static/: app.js  index.html  style.css
docs/: DEMO_GUIDE.md  PART_3_EVALUATION.md
docs/superpowers/plans/: 2026-04-20-expert-search.md  2026-04-21-conversation-context.md
docs/superpowers/specs/: 2026-04-20-expert-search-design.md  2026-04-21-conversation-context-design.md
tests/: conftest.py  test_bm25_index.py  test_chroma_store.py  test_cli.py  test_config.py  test_db.py  test_deterministic_agent.py  test_embeddings.py  test_health.py  test_ingest.py  test_judge.py  test_llm.py  test_models.py  test_probe_texts.py  test_profile_builder.py  test_query_parser.py  test_rag_agent.py  test_routes_chat.py  test_routes_experts.py  test_routes_ingest.py  test_scoring.py  test_search.py  test_session_store.py  test_vocabulary.py
tests/integration/: test_chat_end_to_end.py
