[project]
name = "take-home"
version = "0.1.0"
description = "DB exploration"
authors = [
    {name = "Talha Turab",email = "turabtalha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "openai (>=2.32.0,<3.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "claude-agent-sdk (>=0.1.63,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real external services (DB, LLM APIs)",
]

